css/styles.css
/* ... */
.navigation {
  display: flex;
  gap: 76px;
  align-items: center;
}

.link {
  padding: 24px 0;
  display: block;
}

.nav {
  display: flex;
  gap: 40px;
}

.email-phone {
  display: flex;
  gap: 40px;
}

.logo-studio {
  color: #2e2f42;
}

.page-logo {
  font-family: 'Raleway', sans-serif;
  text-transform: uppercase;
  color: #4d5ae5;
  font-size: 18px;
  font-weight: 700;
  letter-spacing: 0.03em;
  line-height: 1.17;
}

.nav-option {
  position: relative;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.nav-option:hover,
.nav-option:focus {
  color: #404bbf;
}

.current {
  color: #404bbf;
}

.nav-option::after {
  position: absolute;
  content: '';
  display: block;
  width: 100%;
  height: 4px;
  bottom: -1px;
  border-radius: 2px;
  background-color: #404bbf;
  opacity: 0;
  transform: translateX(-25%);
  transition:
    transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.nav-option:hover::after,
.nav-option:focus::after,
.nav-option.current::after {
  transform: translateX(0);
  opacity: 1;
}

address {
  font-style: normal;
}

.contacts {
  color: #434455;
  letter-spacing: 0.02em;
  line-height: 1.5;
  font-weight: 400;
  font-size: 16px;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.contacts:hover,
.contacts:focus {
  color: #404bbf;
}

.hero-sec {
  padding: 188px 0;
  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7)), url('../images/hero-banner.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  max-width: 1440px;
  margin: 0 auto;
}

.main-heading {
  color: #fff;
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  max-width: 496px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 48px;
}

.order-btn {
  display: block;
  margin: 0 auto;
  cursor: pointer;
  background-color: #4d5ae5;
  color: #fff;
  border: none;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0.04em;
  padding: 16px 32px;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.order-btn:hover,
.order-btn:focus {
  background-color: #404bbf;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.features-list {
  display: flex;
  gap: 24px;
  justify-content: center;
}

.feature {
  flex-basis: calc((100% - 72px) / 4);
}

.icon-wrapper {
  width: 100%;
  height: 112px;
  /* padding-block: 24px; */
  border: 1px solid #8e8f99;
  border-radius: 4px;
  background-color: #f4f4fd;
  margin-bottom: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.features-list .sub-subheading {
  margin-bottom: 8px;
}

.sub-subheading {
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  font-weight: 500;
}

.body-text {
  color: #434455;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

.team {
  background-color: #f4f4fd;
}

.our-members {
  display: flex;
  gap: 24px;
  justify-content: center;
}

.socials {
  display: flex;
  gap: 24px;
  justify-content: center;
}

.social-link {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  background-color: #4d5ae5;
  border-radius: 50%;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.social-link .icon,
.soc-link .icon {
  color: #fdfdfd;
}

.text {
  padding: 32px 16px;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
}

.subheading {
  text-align: center;
  font-size: 36px;
  font-weight: 700;
  line-height: 1.11;
  letter-spacing: 0.02em;
  margin-bottom: 72px;
}

.member {
  background-color: #fff;
  box-shadow:
    0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16),
    0 1px 6px 0 rgba(46, 47, 66, 0.08);
  text-align: center;
  flex-basis: calc((100% - 72px) / 4);
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.socials .social-link:hover,
.socials .social-link:focus {
  background-color: #404bbf;
}

.cases {
  display: flex;
  column-gap: 24px;
  row-gap: 48px;
  justify-content: center;
  flex-wrap: wrap;
}

.cases .text {
  border-bottom: 1px solid #e7e9fc;
  border-right: 1px solid #e7e9fc;
  border-left: 1px solid #e7e9fc;
}

.case {
  flex-basis: calc((100% - 48px) / 3);
  background-color: #fff;
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.case-wrapper {
  position: relative;
  overflow: hidden;
}

.case:hover {
  box-shadow:
    0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16),
    0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 40px 32px;
  height: 300px;
  background-color: #4d5ae5;
  color: #f4f4fd;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  transform: translateY(100%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.case:hover .overlay {
  transform: translateY(0);
}

.page-footer {
  background-color: #2e2f42;
  padding: 100px 0;
}

.page-footer .logo-studio {
  color: #f4f4fd;
}

.page-footer .page-logo {
  display: inline-block;
  margin-bottom: 16px;
}

.slogan {
  color: #f4f4fd;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  max-width: 264px;
}

.page-footer .container {
  display: flex;
  gap: 120px;
  align-items: baseline;
}

.page-footer .container div:last-child {
  margin-left: auto;
}

.soc-media,
.subscribe {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #fff;
  margin-bottom: 16px;
}

.soc-links {
  display: flex;
  gap: 16px;
}
/* ... */

